Skip LocalSurfaceId validation in TransformPoint* for Viz hit-test.

Viz hit-test doesn't need LocalSurfaceId in targeting/ transforming
requests, HitTestQuery has that information; and we don't currently
have a valid one in RenderWidgetHostViewGuest and
RenderWidgetHostViewChildFrame in OOP-D. We could add it in RWHVG/
RWHVCF, but since we don't need it anyway, skip this validation for
Viz hit-test.

Bug: 840893
Change-Id: Ic9bbf9f29fc2016f9c838f781f8cf554c180d61e
Reviewed-on: https://chromium-review.googlesource.com/1050440
Reviewed-by: Robert Kroeger <rjkroege@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Reviewed-by: Ken Buchanan <kenrb@chromium.org>
Commit-Queue: Ria Jiang <riajiang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557725}
Former-commit-id: 7225465e622041cbd36406749c9690afe4de1f8a